--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,2 +1,28 @@
 <h1>Cities#index</h1>
-<p>Find me in app/views/cities/index.html.erb</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>id</th>
+      <th>city</th>
+      
+  
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @cities.each do |ticket| %>
+      <tr>
+        <td><%= ticket.id %></td>
+        <td><%= ticket.name %></td>
+       <td><%= link_to 'Edit', edit_city_path(ticket.id)%> <td><%= link_to 'show', ticket %> <td><%= link_to 'destroy', ticket, :method => :delete, data: {confirm: "Sure?"} %></td></td> 
+ 
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<%= link_to 'New Ticket', new_city_path %>
+
+
