--- a/app/views/cities/new.html.erb
+++ b/app/views/cities/new.html.erb
@@ -1,2 +1,8 @@
 <h1>Cities#new</h1>
-<p>Find me in app/views/cities/new.html.erb</p>
+
+
+<%= render 'form' %>
+
+
+
+<%= link_to 'Back', cities_path %>
