--- a/app/views/cities/update.html.erb
+++ b/app/views/cities/update.html.erb
@@ -1,2 +1,7 @@
 <h1>Cities#update</h1>
-<p>Find me in app/views/cities/update.html.erb</p>
+
+<%= render 'form' %>
+
+
+
+<%= link_to 'Back', cities_path %>
