--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Contacts#edit</h1>
-<p>Find me in app/views/contacts/edit.html.erb</p>
+<%= render 'form' %>
+
+
+
+<%= link_to 'Back', contacts_path %>
