--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,2 +1,28 @@
 <h1>Contacts#index</h1>
-<p>Find me in app/views/contacts/index.html.erb</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>City Id</th>
+      <th>Objects</th>
+      <th>Number of contacts</th>
+      
+  
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @contacts.each do |ticket| %>
+      <tr>
+        <td><%= ticket.city_id %></td>
+        <td><%= ticket.objects %></td>
+        <td><%= ticket.number %></td>
+       <td><%= link_to 'Edit', edit_contact_path(ticket.id)%> <td><%= link_to 'show', ticket %> <td><%= button_to 'destroy', ticket, :method => :delete, data: {confirm: "Sure?"} %></td></td> 
+ 
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<%= link_to 'New user', new_contact_path %>
