--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,7 +2,7 @@
 <table>
   <thead>
     <tr>
-      <th>City</th>
+      <th>Miasto</th>
       <th>Liczba zarejestrowanych kontaktów</th>
       <th>Liczba obiektów</th>
       
@@ -32,5 +32,6 @@
     <% end %>
   </tbody>
 </table>
-
+<br>
+<%= link_to 'New contact', new_contact_path %>
 
