--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title>Ufo</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%=javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
+
+<div id="user_header">
+<% if current_user %>
+  Logged in as <%= current_user.email %>
+  <%= link_to "Log out", logout_path %>
+  <%else%>
+  
+  <%= link_to "Log in", login_path %> 
+  <%end%>
+<%= link_to "Główna", root_path %> 
+  <br>
+
+
+</div>
+
+<% flash.each do |name, msg|%>
+<%= content_tag :div, msg, id: "flash_#{name}"%>
+<% end %>
 
 <%= yield %>
 
